--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.4",
+    "dayjs": "^1.11.7",
     "normalize.css": "^8.0.1",
     "pinia": "^2.0.33",
+    "underscore": "^1.13.6",
     "vant": "^4.1.1",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
